--- a/pom.xml
+++ b/pom.xml
@@ -4,14 +4,14 @@
     <modelVersion>4.0.0</modelVersion>
     <artifactId>direct-msg-monitor</artifactId>    
     <name>Direct Project message monitor</name>
-    <version>6.0.2</version>
+    <version>6.0.2.1</version>
     <description>Direct Project message monitor for timely and reliable messaging</description>
     <inceptionYear>2010</inceptionYear>
     <url>http://api.nhindirect.org/x/www/api.nhindirect.org/java/site/direct-msg-monitor/${project.version}</url> 
    <parent>
 	   <groupId>org.springframework.boot</groupId>
 	   <artifactId>spring-boot-dependencies</artifactId>
-	   <version>2.1.3.RELEASE</version>
+	   <version>2.7.18</version>
    </parent>    
     <developers>
         <developer>
@@ -42,21 +42,21 @@
   </licenses>      
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<camel.version>2.22.0</camel.version>
+		<camel.version>2.25.4</camel.version>
 	</properties>  
 	<dependencyManagement>
 		<dependencies>
 		  <dependency>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-dependencies</artifactId>
-				<version>2.1.3.RELEASE</version>
+				<version>2.7.18</version>
 				<type>pom</type>
 				<scope>import</scope>
 		  </dependency>		
 		  <dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-starter-parent</artifactId>
-				<version>Greenwich.SR1</version>
+				<version>2021.0.8</version>
 				<type>pom</type>
 				<scope>import</scope>
 		  </dependency>  		   			  		  			
@@ -115,12 +115,12 @@
 		<dependency>
 			<groupId>org.nhind</groupId>
 			<artifactId>direct-common</artifactId>
-			<version>6.0</version>		
+			<version>6.0.1.1</version>
 		</dependency>  
 		<dependency>
 			<groupId>org.nhind</groupId>
 			<artifactId>direct-msg-monitor-model</artifactId>
-			<version>6.0</version>		
+			<version>6.0.0.1</version>
 		</dependency> 		    
 		<dependency>
 			<groupId>javax.mail</groupId>
@@ -188,7 +188,12 @@
 	        <artifactId>hawtdb</artifactId>
 	        <version>1.6</version>   
 	    </dependency>
-	    <!--  test jars -->	
+	    <!--  test jars -->
+		<dependency>
+			<groupId>org.junit.vintage</groupId>
+			<artifactId>junit-vintage-engine</artifactId>
+			<scope>test</scope>
+		</dependency>
 		<dependency>
 		    <groupId>com.h2database</groupId>
 		    <artifactId>h2</artifactId>
@@ -335,33 +340,33 @@
        </executions>
      </plugin>
 
-	     <plugin>
-	      	<groupId>org.apache.maven.plugins</groupId> 
-	        <artifactId>maven-javadoc-plugin</artifactId>
-	        <version>2.9.1</version>
-	        <configuration>
-			    <additionalparam>-Xdoclint:none</additionalparam>
-				<charset>UTF-8</charset>
-				<docencoding>UTF-8</docencoding>
-				<docfilessubdirs>true</docfilessubdirs>
-				<detectJavaApiLink>true</detectJavaApiLink>
-				<detectLinks>true</detectLinks>
-				<source>1.8</source>
-				<show>public</show>          	          
-	        </configuration>
-	        <executions>
-	            <execution>
-	                <phase>package</phase>
-	                <id>attach-javadocs</id>
-	                <goals>
-	                  <goal>jar</goal>
-	                </goals>
-                    <configuration> 
-                        <additionalparam>-Xdoclint:none</additionalparam>
-                    </configuration>	                
-	            </execution>
-	        </executions>		        
-	     </plugin>  
+<!--	     <plugin>-->
+<!--	      	<groupId>org.apache.maven.plugins</groupId> -->
+<!--	        <artifactId>maven-javadoc-plugin</artifactId>-->
+<!--	        <version>2.9.1</version>-->
+<!--	        <configuration>-->
+<!--			    <additionalparam>-Xdoclint:none</additionalparam>-->
+<!--				<charset>UTF-8</charset>-->
+<!--				<docencoding>UTF-8</docencoding>-->
+<!--				<docfilessubdirs>true</docfilessubdirs>-->
+<!--				<detectJavaApiLink>true</detectJavaApiLink>-->
+<!--				<detectLinks>true</detectLinks>-->
+<!--				<source>1.8</source>-->
+<!--				<show>public</show>          	          -->
+<!--	        </configuration>-->
+<!--	        <executions>-->
+<!--	            <execution>-->
+<!--	                <phase>package</phase>-->
+<!--	                <id>attach-javadocs</id>-->
+<!--	                <goals>-->
+<!--	                  <goal>jar</goal>-->
+<!--	                </goals>-->
+<!--                    <configuration> -->
+<!--                        <additionalparam>-Xdoclint:none</additionalparam>-->
+<!--                    </configuration>	                -->
+<!--	            </execution>-->
+<!--	        </executions>		        -->
+<!--	     </plugin>  -->
          <!--  for releases only	     
 	     <plugin>
              <groupId>org.apache.maven.plugins</groupId>
